# sensor-app

./: .env.example  .gitattributes  .gitignore  Makefile  README.md  design_doc.md  producer.py  pyproject.toml  run_streaming_stack.py  spec_ch1.md  spec_ch2.md  spec_ch3.md  take-home-README.txt  take-home-assignment.md
.github/workflows/: ci.yml
docs/api/: README.md
src/sensor_app/: __init__.py  settings.py
src/sensor_app/api/: __init__.py  main.py  middleware.py
src/sensor_app/lib/: __init__.py  metrics_compute.py  metrics_store.py  pipeline.py  repository.py  schema_defs.py  sensor_event.py  stream_consumer.py
src/sensor_app/llm/: __init__.py  allowed_keys.py  client.py  context.py  exceptions.py  query_execute.py  service.py  types.py
tests/: conftest.py  test_api.py  test_llm.py  test_llm_units.py  test_metrics_compute.py  test_pipeline_integration.py  test_schema_defs.py  test_stream_api.py  test_stream_consumer.py
